# Rorchestra

./: .gitignore  README.md  check_syntax.py  pyproject.toml
.gemini/: settings.json
.github/workflows/: publish.yml
app/: __init__.py  config.py  main.py  rochester.py  rochester_main.py
app/adapters/: gemini_cli.py  luau_lsp.py
app/models/: entities.py  schemas.py
app/policies/: safety.py
app/services/: patch_apply.py  token_tracker.py
app/services/agents/: __init__.py  large_change.py  orchestrator.py  tools.py
app/services/graph/: builder.py
app/services/ingest/: pipeline.py
app/services/mcp/: capability_router.py  trigger_policy.py
app/services/memory/: hierarchy.py  refresh.py  skill_loader.py  store.py
app/services/packets/: assembler.py
app/services/summarization/: summarizer.py
app/services/workers/: lifecycle.py
app/storage/: database.py
app/telemetry/: metrics.py
orchestrator/: pyproject.toml
orchestrator/.gemini/agents/: domain-investigator.md  mcp-validator.md  packet-assembler.md  patch-reviewer.md  repo-investigator.md
orchestrator/app/: config.py  main.py
orchestrator/app/adapters/: roblox_mcp.py  rojo.py
orchestrator/app/models/: schemas.py
orchestrator/app/services/ingest/: pipeline.py
orchestrator/app/services/mcp/: validator.py
orchestrator/app/services/packets/: assembler.py
orchestrator/app/services/validation/: static.py
orchestrator/app/storage/: artifacts.py  database.py
orchestrator/orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
skills/: roblox-ui-scaling.md
