[project]
name = "rorchestra"
version = "0.1.0"
description = "Roblox/Luau AI orchestration system for codebase understanding and scoped edit generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["roblox", "luau", "ai", "orchestration", "gemini"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "tiktoken>=0.5",
    "aiofiles>=23.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
orch = "app.main:cli"
rorchestra = "app.rochester:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
